Suppress warning when running sandbox ide